--- a/app/views/base.html
+++ b/app/views/base.html
@@ -33,14 +33,17 @@
             <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
-          <a class="navbar-brand" href="{{base_path}}">Tsoha Bootstrap</a>
+          <a class="navbar-brand" href="#">Kaikki arvostelut</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
-            <li><a href="{{base_path}}">Etusivu</a></li>
+            <li><a href="#">Omat arvostelut</a></li>
           </ul>
+            <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Kirjaudu sisään</a></li>
+      </ul>
         </div>
       </div>
     </nav>
