viikon kolme paivitykset

--- a/app/views/suunnitelmat/esittely.html
+++ b/app/views/suunnitelmat/esittely.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Koff III</h1>
+  <h1>{{olut.nimi}}</h1>
   <!-- Painikkeet tähän -->
   <p>
     <button class="btn btn-danger">Poista</button> <a href="#" class="btn btn-default">Muokkaa</a>
