--- a/app/views/suunnitelmat/edit.html
+++ b/app/views/suunnitelmat/edit.html
@@ -5,15 +5,11 @@
   <form>
     <div class="form-group">
       <label>Nimi</label>
-      <input type="text" class="form-control" value="Koff III">
-    </div>
-    <div class="form-group">
-      <label>Arvostelupäivä</label>
-      <input type="text" class="form-control" value="11.11.2011">
+      <input type="text" class="form-control" value="{{olut.nimi}}">
     </div>
     <div class="form-group">
       <label>Panimo</label>
-      <input type="text" class="form-control" value="Sinebrychoff">
+      <input type="text" class="form-control" value="{{olut.panimo}}">
     </div>
     <div class="form-group">
       <label>Kuvaus</label>
