--- a/app/views/base.html
+++ b/app/views/base.html
@@ -33,16 +33,16 @@
             <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
-          <a class="navbar-brand" href="#">Kaikki arvostelut</a>
+          <a class="navbar-brand" href="/tietokantasovellus/olut/frontpage">Olutarvostelu</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
-            <li><a href="#">Omat arvostelut</a></li>
+            <li><a href="/tietokantasovellus/olut/olutlista">Listaussivu</a></li>
           </ul>
             <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Kirjaudu sisään</a></li>
+        <li><a href="/tietokantasovellus/login">Kirjaudu sisään</a></li>
       </ul>
         </div>
       </div>
