--- a/app/views/olut/esittely.html
+++ b/app/views/olut/esittely.html
@@ -1,14 +1,15 @@
+{% import "macros/forms.html" as forms %}
 {% extends "base.html" %}
 {% block content %}
   <h1>{{olut.nimi}}</h1>
   <!-- Painikkeet tähän -->
   <p>
-    <button class="btn btn-danger">Poista</button> <a href="#" class="btn btn-default">Muokkaa</a>
+    {{forms.destroy_button("#{base_path}/olut/#{olut.id}/destroy")}}
+    <a href="{{base_path}}/olut/{{olut.id}}/edit" class="btn btn-default">Muokkaa</a>
   </p>
   <!-- Tiedot tulee listana tähän -->
   <ul>
-    <li><strong>Arvostelupäivä:</strong> 11.11.2011</li>
-    <li><strong>Panimo:</strong> Sinebrychoff</li>
+    <li><strong>Panimo:</strong> {{olut.panimo}}</li>
     <li><strong>Tyyppi:</strong> lager</li>
     <li><strong>Arvosana:</strong> 71</li>
   </ul>
