--- a/app/views/olut/edit.html
+++ b/app/views/olut/edit.html
@@ -1,15 +1,26 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Muokkaa arvostelua Koff III</h1>
+<p>{{message}}</p>
+{% if errors %}
+  <div class="alert alert-danger">
+      <ul>
+          {% for error in errors %}
+          <li>{{error}}</li>
+          {% endfor %}
+      </ul>
+  </div>
+  {% endif %}
+  
+  <h1>Muokkaa arvostelua: {{olut.nimi}}</h1>
 
-  <form>
+  <form method="post" action="{{base_path}}/olut/{{olut.id}}/edit">
     <div class="form-group">
       <label>Nimi</label>
-      <input type="text" class="form-control" value="{{olut.nimi}}">
+      <input name="nimi" type="text" class="form-control" value="{{olut.nimi}}">
     </div>
     <div class="form-group">
       <label>Panimo</label>
-      <input type="text" class="form-control" value="{{olut.panimo}}">
+      <input name="panimo" type="text" class="form-control" value="{{olut.panimo}}">
     </div>
     <div class="form-group">
       <label>Kuvaus</label>
