--- a/app/views/olut/new.html
+++ b/app/views/olut/new.html
@@ -2,23 +2,26 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Lisää olut kirjastoon</h1>
-
+  
+  {% if errors %}
+  <div class="alert alert-danger">
+      <ul>
+          {% for error in errors %}
+          <li>{{error}}</li>
+          {% endfor %}
+      </ul>
+  </div>
+  {% endif %}
   <form method="post" action="{{base_path}}/olut">
     <div class="form-group">
       <label>Nimi</label>
-      <input type="text" name="nimi" class="form-control">
+      <input type="text" name="nimi" class="form-control" value="{{attributes.nimi}}">
     </div>
 
     <div class="form-group">
       <label>Panimo</label>
-      <input type="text" name="panimo" class="form-control">
+      <input type="text" name="panimo" class="form-control" value="{{attributes.panimo}}">
     </div>
-
-    <div class="form-group">
-      <label>Tyyppi</label>
-      <input type="text" name="tyyppi_id" class="form-control">
-    </div>
-
 
     <div class="form-group">
       <button type="submit" class="btn btn-primary">Lisää</button>
