--- a/app/views/olut/frontpage.html
+++ b/app/views/olut/frontpage.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<p>{{message}}</p>
   <h1>Tälle sivulle on listattu kaikki tietokannassa olevat oluet.</h1>
   
   
