--- a/app/views/olut/new.html
+++ b/app/views/olut/new.html
@@ -22,6 +22,15 @@
       <label>Panimo</label>
       <input type="text" name="panimo" class="form-control" value="{{attributes.panimo}}">
     </div>
+     
+      <div class="form-group">
+          <label>Tyyppi</label>
+          <select class="form-control" name="tyyppi">
+              {% for tyyppi in tyypit %}
+              <option value="{{tyyppi.id}}">{{tyyppi.nimi}}</option>
+              {% endfor %}
+          </select>
+      </div>
 
     <div class="form-group">
       <button type="submit" class="btn btn-primary">Lisää</button>
