--- a/app/views/base.html
+++ b/app/views/base.html
@@ -27,23 +27,35 @@
 
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
           <a class="navbar-brand" href="/tietokantasovellus/olut/frontpage">Olutarvostelu</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
-          <ul class="nav navbar-nav">
-            <!-- Navigaation linkit -->
-            <li><a href="/tietokantasovellus/olut/olutlista">Listaussivu</a></li>
-          </ul>
+            <ul class="nav navbar-nav">
+                <!-- Navigaation linkit -->
+                <li><a href="/tietokantasovellus/olut/olutlista">Listaussivu</a></li>
+            </ul>
+            {% if user_logged_in %}
+            <p class="navbar-text navbar-right">Kirjautunut sisään tunnuksella: {{user_logged_in.username}}</p>
+ 
+            {% else %}
+
+            {% endif %}
+            {% if user_logged_in %}
+            <form class="navbar-form navbar-right" method="post" action="{{base_path}}/logout">
+                <button type="submit" class="btn btn-default">Kirjaudu ulos</button>
+            </form>
+            {% else %}
             <ul class="nav navbar-nav navbar-right">
-        <li><a href="/tietokantasovellus/login">Kirjaudu sisään</a></li>
-      </ul>
+                <li><a href="{{base_path}}/login">Kirjaudu sisään</a></li>
+            </ul>
+            {% endif %}
         </div>
       </div>
     </nav>
