--- a/app/views/olut/frontpage.html
+++ b/app/views/olut/frontpage.html
@@ -18,6 +18,7 @@
         <th>Olut</th>
         <th>Panimo</th>
         <th>Tyyppi</th>
+        <th>Kuvaus</th>
         <th></th>
       </tr>
     </thead>
@@ -29,6 +30,7 @@
           <td><a href="{{base_path}}/olut/{{olut.id}}">{{olut.nimi}}</td>
         <td>{{olut.panimo}}</td>
         <td>{{olut.tyyppi_id}}</td>
+        <td>{{olut.kuvaus}}</td>
         <th><a class="btn btn-default btn-sm" href="{{base_path}}/olut/{{olut.id}}/edit">Muokkaa</a></th>
       </tr>
       {% endfor %}
