--- a/app/views/olut/edit.html
+++ b/app/views/olut/edit.html
@@ -2,33 +2,40 @@
 {% block content %}
 <p>{{message}}</p>
 {% if errors %}
-  <div class="alert alert-danger">
-      <ul>
-          {% for error in errors %}
-          <li>{{error}}</li>
-          {% endfor %}
-      </ul>
-  </div>
-  {% endif %}
-  
-  <h1>Muokkaa arvostelua: {{olut.nimi}}</h1>
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
 
-  <form method="post" action="{{base_path}}/olut/{{olut.id}}/edit">
+<h1>Muokkaa arvostelua: {{olut.nimi}}</h1>
+
+<form method="post" action="{{base_path}}/olut/{{olut.id}}/edit">
     <div class="form-group">
-      <label>Nimi</label>
-      <input name="nimi" type="text" class="form-control" value="{{olut.nimi}}">
+        <label>Nimi</label>
+        <input name="nimi" type="text" class="form-control" value="{{olut.nimi}}">
     </div>
     <div class="form-group">
-      <label>Panimo</label>
-      <input name="panimo" type="text" class="form-control" value="{{olut.panimo}}">
+        <label>Panimo</label>
+        <input name="panimo" type="text" class="form-control" value="{{olut.panimo}}">
     </div>
     <div class="form-group">
-      <label>Kuvaus</label>
-      <textarea class="form-control">        Keltainen, keskitäyteläinen, miedosti humaloitu, kevyen maltainen, hedelmäinen, raikas
-      </textarea>
+        <label>Kuvaus</label>
+        <input name="kuvaus" type="text" class="form-control" value="{{olut.kuvaus}}">
     </div>
     <div class="form-group">
-      <button type="submit" class="btn btn-primary">Tallenna</button>
+        <label>Tyyppi</label>
+        <select class="form-control" name="tyyppi_id">
+            {% for tyyppi in tyypit %}
+            <option value="{{tyyppi.id}}">{{tyyppi.nimi}}</option>
+            {% endfor %}
+        </select>
+    </div>  
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Tallenna</button>
     </div>
-  </form>
+</form>
 {% endblock %}
