--- a/app/views/olut/esittely.html
+++ b/app/views/olut/esittely.html
@@ -10,11 +10,9 @@
   <!-- Tiedot tulee listana tähän -->
   <ul>
     <li><strong>Panimo:</strong> {{olut.panimo}}</li>
-    <li><strong>Tyyppi:</strong> lager</li>
-    <li><strong>Arvosana:</strong> 71</li>
+    <li><strong>Tyyppi:</strong> {{olut.tyyppi}}</li>
+    <li><strong>Kuvaus:</strong> {{olut.kuvaus}}</li>
   </ul>
   <!-- Kuvaus tulee tähän -->
-  <p>
-    Keltainen, keskitäyteläinen, miedosti humaloitu, kevyen maltainen, hedelmäinen, raikas
-  </p>
+  
 {% endblock %}
