--- a/app/views/arvostelut/kaikki.html
+++ b/app/views/arvostelut/kaikki.html
@@ -3,7 +3,7 @@
   <h1>Käyttäjän {{user_logged_in.username}} olutarvostelut</h1>
 
   <p>
-    <a href="{{base_path}}/olut/uusiArvostelu" class="btn btn-success">Lisää arvostelu</a>
+    <a href="{{base_path}}/arvostelut/uusi" class="btn btn-success">Lisää arvostelu</a>
   </p>
 
   <table class="table table-striped table-bordered">
