--- a/app/views/base.html
+++ b/app/views/base.html
@@ -33,7 +33,7 @@
               <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
-          <a class="navbar-brand" href="/tietokantasovellus/olut/listaussivu">Omat arvostelut</a>
+<!--          <a class="navbar-brand" href="/tietokantasovellus/olut/listaussivu">Omat arvostelut</a>-->
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
@@ -55,6 +55,7 @@
             {% else %}
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{base_path}}/login">Kirjaudu sisään</a></li>
+                <li><a href="{{base_path}}/register">Rekisteröidy</a></li>
             </ul>
             {% endif %}
         </div>
